--- a/Reddit.Core/Reddit.Core.csproj
+++ b/Reddit.Core/Reddit.Core.csproj
@@ -6,7 +6,11 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
   </ItemGroup>
 
 </Project>
